#1319 - Cross-Layer Relations
- Allow choosing "Any" as the attach layer when creating a new relation layer